Add comprehensive SEO: meta tags, Open Graph, Twitter Cards, Schema.org JSON-LD

--- a/index.html
+++ b/index.html
@@ -1,17 +1,292 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-MX" prefix="og: https://ogp.me/ns#">
 <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terreno Premium en Renta | 3,473 m² | Corredor Audi Puebla</title>
-    <meta name="description" content="Terreno estratégico de 3,473 m² en Rafael Lara Grajales, a 11 minutos de Planta AUDI México. Ideal para bodega, centro de distribución o plaza comercial. Trato directo con propietario.">
-    <meta property="og:title" content="Terreno 3,473 m² en Renta | Corredor Audi Puebla">
-    <meta property="og:description" content="Ubicación estratégica a 11 min de Planta AUDI. Trato directo con propietario.">
-    <meta property="og:image" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!-- Primary Meta Tags -->
+    <title>Terreno en Renta 3,473 m² Rafael Lara Grajales | Corredor Audi Puebla | Trato Directo</title>
+    <meta name="title" content="Terreno en Renta 3,473 m² Rafael Lara Grajales | Corredor Audi Puebla | Trato Directo">
+    <meta name="description" content="Terreno estratégico de 3,473 m² en renta en Rafael Lara Grajales, Puebla. A solo 11 minutos de Planta AUDI México. Ideal para bodega, CEDIS, nave industrial, plaza comercial o tienda de autoservicio. Terreno plano, servicios disponibles, documentación en regla. Trato directo con propietario, sin intermediarios.">
+    <meta name="keywords" content="terreno en renta puebla, terreno industrial puebla, terreno cerca audi mexico, terreno rafael lara grajales, bodega en renta puebla, nave industrial puebla, terreno comercial puebla, corredor audi, terreno para cedis, terreno logistica puebla, arrendamiento terreno industrial, terreno 3473 m2, inmuebles industriales puebla, terreno planta audi">
+    <meta name="author" content="Propietario Directo">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="language" content="Spanish">
+    <meta name="revisit-after" content="7 days">
+    <meta name="rating" content="general">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://terreno.todocdmx.com/">
+
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="MX-PUE">
+    <meta name="geo.placename" content="Rafael Lara Grajales, Puebla">
+    <meta name="geo.position" content="19.19;-97.6">
+    <meta name="ICBM" content="19.19, -97.6">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://terreno.todocdmx.com/">
+    <meta property="og:title" content="Terreno en Renta 3,473 m² | Corredor Audi Puebla | Trato Directo">
+    <meta property="og:description" content="Terreno estratégico de 3,473 m² a 11 min de Planta AUDI México. Ideal para bodega, CEDIS, nave industrial o plaza comercial. Trato directo con propietario.">
+    <meta property="og:image" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
+    <meta property="og:image:secure_url" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Terreno de 3,473 m² en Rafael Lara Grajales, Puebla - Vista aérea">
+    <meta property="og:site_name" content="Terreno Corredor Audi Puebla">
+    <meta property="og:locale" content="es_MX">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://terreno.todocdmx.com/">
+    <meta name="twitter:title" content="Terreno en Renta 3,473 m² | Corredor Audi Puebla">
+    <meta name="twitter:description" content="Terreno estratégico a 11 min de Planta AUDI. Ideal para bodega, CEDIS o plaza comercial. Trato directo.">
+    <meta name="twitter:image" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
+    <meta name="twitter:image:alt" content="Terreno de 3,473 m² en Rafael Lara Grajales, Puebla">
+
+    <!-- Additional Meta for WhatsApp/Telegram -->
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏗️</text></svg>">
+    <link rel="apple-touch-icon" href="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#1a365d">
+    <meta name="msapplication-TileColor" content="#1a365d">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Terreno Audi">
+
+    <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://blockchainstarter.nyc3.digitaloceanspaces.com">
+    <link rel="preconnect" href="https://www.youtube.com">
+    <link rel="preconnect" href="https://www.google.com">
+    <link rel="dns-prefetch" href="https://wa.me">
+
+    <!-- Preload Critical Assets -->
+    <link rel="preload" href="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg" as="image">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" as="style">
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+
+    <!-- Schema.org Structured Data - RealEstateListing -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "RealEstateListing",
+        "name": "Terreno en Renta 3,473 m² - Corredor Audi Puebla",
+        "description": "Terreno estratégico de 3,473 m² en Rafael Lara Grajales, Puebla. A 11 minutos de Planta AUDI México. Ideal para bodega, CEDIS, nave industrial, plaza comercial o tienda de autoservicio. Terreno plano con todos los servicios y documentación en regla. Trato directo con propietario.",
+        "url": "https://terreno.todocdmx.com/",
+        "image": [
+            "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg",
+            "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878729.jpg",
+            "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878730.jpg",
+            "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878731.webp",
+            "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878733.jpg"
+        ],
+        "datePosted": "2025-01-19",
+        "validThrough": "2026-12-31",
+        "businessFunction": "LeaseOut",
+        "leaseLength": {
+            "@type": "QuantitativeValue",
+            "minValue": 12,
+            "unitCode": "MON"
+        },
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "C. 9 Pte. & C. 13 Sur",
+            "addressLocality": "Rafael Lara Grajales",
+            "addressRegion": "Puebla",
+            "postalCode": "75380",
+            "addressCountry": "MX"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 19.19,
+            "longitude": -97.6
+        },
+        "areaServed": {
+            "@type": "Place",
+            "name": "Corredor Industrial Audi, Puebla, México"
+        },
+        "floorSize": {
+            "@type": "QuantitativeValue",
+            "value": 3473,
+            "unitCode": "MTK"
+        },
+        "additionalProperty": [
+            {
+                "@type": "PropertyValue",
+                "name": "Tipo de Terreno",
+                "value": "Plano"
+            },
+            {
+                "@type": "PropertyValue",
+                "name": "Uso de Suelo",
+                "value": "Comercial/Industrial"
+            },
+            {
+                "@type": "PropertyValue",
+                "name": "Distancia a Planta AUDI",
+                "value": "11 minutos"
+            },
+            {
+                "@type": "PropertyValue",
+                "name": "Servicios",
+                "value": "Agua, Luz, Drenaje disponibles"
+            },
+            {
+                "@type": "PropertyValue",
+                "name": "Documentación",
+                "value": "En regla"
+            }
+        ]
+    }
+    </script>
+
+    <!-- Schema.org - Local Business -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Terreno en Renta - Corredor Audi Puebla",
+        "description": "Terreno estratégico de 3,473 m² disponible para arrendamiento en Rafael Lara Grajales, Puebla.",
+        "url": "https://terreno.todocdmx.com/",
+        "telephone": "+522227611743",
+        "image": "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "C. 9 Pte. & C. 13 Sur",
+            "addressLocality": "Rafael Lara Grajales",
+            "addressRegion": "Puebla",
+            "postalCode": "75380",
+            "addressCountry": "MX"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 19.19,
+            "longitude": -97.6
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
+            "opens": "08:00",
+            "closes": "20:00"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+522227611743",
+            "contactType": "sales",
+            "availableLanguage": ["Spanish", "English"]
+        },
+        "sameAs": [
+            "https://wa.me/522227611743"
+        ]
+    }
+    </script>
+
+    <!-- Schema.org - BreadcrumbList -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Terrenos en Renta Puebla",
+                "item": "https://terreno.todocdmx.com/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Corredor Audi",
+                "item": "https://terreno.todocdmx.com/#ubicacion"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Terreno 3,473 m²",
+                "item": "https://terreno.todocdmx.com/"
+            }
+        ]
+    }
+    </script>
+
+    <!-- Schema.org - VideoObject -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "VideoObject",
+        "name": "Recorrido Virtual - Terreno 3,473 m² Rafael Lara Grajales",
+        "description": "Video tour del terreno de 3,473 m² disponible para renta en Rafael Lara Grajales, Puebla. Ubicado a 11 minutos de la Planta AUDI México.",
+        "thumbnailUrl": "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg",
+        "uploadDate": "2025-01-19",
+        "contentUrl": "https://www.youtube.com/watch?v=KD8Me_-7bD0",
+        "embedUrl": "https://www.youtube.com/embed/KD8Me_-7bD0"
+    }
+    </script>
+
+    <!-- Schema.org - FAQPage -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "¿Cuántos metros cuadrados tiene el terreno?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "El terreno cuenta con una superficie total de 3,473 metros cuadrados."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "¿A qué distancia está de la Planta AUDI México?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "El terreno se encuentra a solo 11 minutos en automóvil de la entrada principal de la Planta AUDI México."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "¿El terreno tiene servicios disponibles?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Sí, el terreno cuenta con acceso a todos los servicios: agua, luz y drenaje. Las calles están urbanizadas."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "¿Se puede construir una bodega o nave industrial?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Sí, el terreno es ideal para bodega, CEDIS, nave industrial, plaza comercial, tienda de autoservicio o estación de servicio."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "¿El trato es directo con el propietario?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Sí, el trato es 100% directo con el propietario, sin intermediarios ni comisiones adicionales."
+                }
+            }
+        ]
+    }
+    </script>
 
     <style>
         :root {
