--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         "description": "Terreno estratégico de 3,473 m² disponible para arrendamiento en Rafael Lara Grajales, Puebla.",
         "url": "https://terreno.todocdmx.com/",
         "telephone": "+522227611743",
+        "email": "terreno@todocdmx.com",
         "image": "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg",
         "address": {
             "@type": "PostalAddress",
@@ -187,6 +188,7 @@
         "contactPoint": {
             "@type": "ContactPoint",
             "telephone": "+522227611743",
+            "email": "terreno@todocdmx.com",
             "contactType": "sales",
             "availableLanguage": ["Spanish", "English"]
         },
@@ -1370,6 +1372,10 @@
                 <a href="tel:+522227611743" class="btn btn-call">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
                     Llamar Ahora
+                </a>
+                <a href="mailto:terreno@todocdmx.com?subject=Interesado%20en%20Terreno%203,473%20m²%20Rafael%20Lara%20Grajales" class="btn btn-call">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                    Enviar Email
                 </a>
             </div>
 
