--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Primary Meta Tags -->
-    <title>Terreno en Renta 3,473 m² Rafael Lara Grajales | Corredor Audi Puebla | Trato Directo</title>
-    <meta name="title" content="Terreno en Renta 3,473 m² Rafael Lara Grajales | Corredor Audi Puebla | Trato Directo">
-    <meta name="description" content="Terreno estratégico de 3,473 m² en renta en Rafael Lara Grajales, Puebla. A solo 11 minutos de Planta AUDI México. Ideal para bodega, CEDIS, nave industrial, plaza comercial o tienda de autoservicio. Terreno plano, servicios disponibles, documentación en regla. Trato directo con propietario, sin intermediarios.">
-    <meta name="keywords" content="terreno en renta puebla, terreno industrial puebla, terreno cerca audi mexico, terreno rafael lara grajales, bodega en renta puebla, nave industrial puebla, terreno comercial puebla, corredor audi, terreno para cedis, terreno logistica puebla, arrendamiento terreno industrial, terreno 3473 m2, inmuebles industriales puebla, terreno planta audi">
+    <title>RENTA Terreno 3,473 m² Corredor Audi Puebla | Arrendamiento Industrial | Trato Directo</title>
+    <meta name="title" content="RENTA Terreno 3,473 m² Corredor Audi Puebla | Arrendamiento Industrial | Trato Directo">
+    <meta name="description" content="SE RENTA terreno de 3,473 m² en Rafael Lara Grajales, Puebla. Arrendamiento a largo plazo, a 11 min de Planta AUDI México. Perfecto para rentar y construir bodega, CEDIS, nave industrial, Bodega Aurrera, Tiendas 3B, plaza comercial. Terreno plano listo para construir. TRATO DIRECTO con propietario.">
+    <meta name="keywords" content="renta terreno puebla, renta terreno industrial, arrendamiento terreno audi, se renta terreno rafael lara grajales, renta bodega puebla, arrendamiento nave industrial, renta terreno comercial puebla, terreno en renta corredor audi, arrendamiento terreno cedis, renta terreno logistica, se renta predio industrial, terreno disponible renta puebla, arrendamiento largo plazo terreno, renta terreno bodega aurrera, renta terreno tiendas 3b">
     <meta name="author" content="Propietario Directo">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
@@ -31,8 +31,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://terreno.todocdmx.com/">
-    <meta property="og:title" content="Terreno en Renta 3,473 m² | Corredor Audi Puebla | Trato Directo">
-    <meta property="og:description" content="Terreno estratégico de 3,473 m² a 11 min de Planta AUDI México. Ideal para bodega, CEDIS, nave industrial o plaza comercial. Trato directo con propietario.">
+    <meta property="og:title" content="SE RENTA Terreno 3,473 m² | Corredor Audi Puebla | Arrendamiento Directo">
+    <meta property="og:description" content="SE RENTA terreno de 3,473 m² a 11 min de Planta AUDI. Arrendamiento ideal para bodega, CEDIS, nave industrial, Bodega Aurrera o plaza comercial. Trato directo con propietario.">
     <meta property="og:image" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
     <meta property="og:image:secure_url" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
     <meta property="og:image:type" content="image/jpeg">
@@ -45,8 +45,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://terreno.todocdmx.com/">
-    <meta name="twitter:title" content="Terreno en Renta 3,473 m² | Corredor Audi Puebla">
-    <meta name="twitter:description" content="Terreno estratégico a 11 min de Planta AUDI. Ideal para bodega, CEDIS o plaza comercial. Trato directo.">
+    <meta name="twitter:title" content="SE RENTA Terreno 3,473 m² | Corredor Audi Puebla | Arrendamiento">
+    <meta name="twitter:description" content="SE RENTA terreno 3,473 m² a 11 min de Planta AUDI. Arrendamiento para bodega, CEDIS, Bodega Aurrera, Tiendas 3B. Trato directo.">
     <meta name="twitter:image" content="https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg">
     <meta name="twitter:image:alt" content="Terreno de 3,473 m² en Rafael Lara Grajales, Puebla">
 
@@ -85,8 +85,8 @@
     {
         "@context": "https://schema.org",
         "@type": "RealEstateListing",
-        "name": "Terreno en Renta 3,473 m² - Corredor Audi Puebla",
-        "description": "Terreno estratégico de 3,473 m² en Rafael Lara Grajales, Puebla. A 11 minutos de Planta AUDI México. Ideal para bodega, CEDIS, nave industrial, plaza comercial o tienda de autoservicio. Terreno plano con todos los servicios y documentación en regla. Trato directo con propietario.",
+        "name": "SE RENTA Terreno 3,473 m² - Corredor Audi Puebla - Arrendamiento Disponible",
+        "description": "SE RENTA terreno de 3,473 m² en Rafael Lara Grajales, Puebla. Arrendamiento a largo plazo, a 11 minutos de Planta AUDI México. Ideal para rentar y construir bodega, CEDIS, nave industrial, Bodega Aurrera, Tiendas 3B o plaza comercial. Terreno plano listo para construir. TRATO DIRECTO con propietario.",
         "url": "https://terreno.todocdmx.com/",
         "image": [
             "https://blockchainstarter.nyc3.digitaloceanspaces.com/terreno/1576878732.jpg",
@@ -160,8 +160,8 @@
     {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "Terreno en Renta - Corredor Audi Puebla",
-        "description": "Terreno estratégico de 3,473 m² disponible para arrendamiento en Rafael Lara Grajales, Puebla.",
+        "name": "SE RENTA Terreno - Corredor Audi Puebla - Arrendamiento Directo",
+        "description": "SE RENTA terreno de 3,473 m² disponible para arrendamiento a largo plazo en Rafael Lara Grajales, Puebla. Trato directo con propietario.",
         "url": "https://terreno.todocdmx.com/",
         "telephone": "+522227611743",
         "email": "terreno@todocdmx.com",
@@ -1066,9 +1066,9 @@
         <div class="hero-bg"></div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <span class="hero-badge">Arrendamiento a Largo Plazo</span>
-            <h1>Terreno Estratégico en el Corredor Audi Puebla</h1>
-            <p class="hero-subtitle">3,473 m² listos para desarrollo comercial o industrial en Rafael Lara Grajales</p>
+            <span class="hero-badge">SE RENTA - Disponible Ahora</span>
+            <h1>Terreno en Renta en el Corredor Audi Puebla</h1>
+            <p class="hero-subtitle">3,473 m² disponibles para arrendamiento a largo plazo en Rafael Lara Grajales. Ideal para Bodega Aurrera, Tiendas 3B, CEDIS o nave industrial.</p>
 
             <div class="hero-stats">
                 <div class="stat">
@@ -1080,13 +1080,13 @@
                     <span class="stat-label">a Planta Audi</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-value">100%</span>
-                    <span class="stat-label">Trato Directo</span>
+                    <span class="stat-value">RENTA</span>
+                    <span class="stat-label">Disponible Ahora</span>
                 </div>
             </div>
 
             <div class="hero-cta">
-                <a href="https://wa.me/522227611743?text=Hola,%20me%20interesa%20el%20terreno%20de%203,473%20m²%20en%20Rafael%20Lara%20Grajales" class="btn btn-primary" target="_blank">
+                <a href="https://wa.me/522227611743?text=Hola,%20me%20interesa%20RENTAR%20el%20terreno%20de%203,473%20m²%20en%20Rafael%20Lara%20Grajales" class="btn btn-primary" target="_blank">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
                     Contactar por WhatsApp
                 </a>
@@ -1361,11 +1361,11 @@
     <!-- CTA Section -->
     <section class="cta">
         <div class="container">
-            <h2 class="section-title">¿Listo para Conocer el Terreno?</h2>
-            <p class="cta-subtitle">Agende una visita o llámenos para más información.<br>Trato directo con el propietario — sin intermediarios.</p>
+            <h2 class="section-title">¿Listo para Rentar Este Terreno?</h2>
+            <p class="cta-subtitle">Agende una visita para conocer el terreno disponible para arrendamiento.<br>Trato directo con el propietario — sin intermediarios ni comisiones.</p>
 
             <div class="cta-buttons">
-                <a href="https://wa.me/522227611743?text=Hola,%20me%20interesa%20agendar%20una%20visita%20al%20terreno%20de%203,473%20m²%20en%20Rafael%20Lara%20Grajales" class="btn btn-whatsapp" target="_blank">
+                <a href="https://wa.me/522227611743?text=Hola,%20me%20interesa%20RENTAR%20el%20terreno%20y%20agendar%20una%20visita.%20Terreno%20de%203,473%20m²%20en%20Rafael%20Lara%20Grajales" class="btn btn-whatsapp" target="_blank">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
                     Contactar por WhatsApp
                 </a>
@@ -1390,8 +1390,8 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p><strong>Terreno en Renta</strong> | Rafael Lara Grajales, Puebla | Corredor Industrial Audi</p>
-            <p style="margin-top: 0.5rem; opacity: 0.7;">© 2025 - Trato Directo con Propietario</p>
+            <p><strong>SE RENTA Terreno 3,473 m²</strong> | Rafael Lara Grajales, Puebla | Corredor Industrial Audi</p>
+            <p style="margin-top: 0.5rem; opacity: 0.7;">© 2025 - Arrendamiento Directo con Propietario | Sin Intermediarios</p>
         </div>
     </footer>
 
